<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"/>
    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/et_username"
        android:inputType="text"
        android:paddingStart="15dp"
        android:background="@drawable/edittext_bg"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/et_password"
        android:paddingStart="15dp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cb_remember"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/tv_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/tv_forget_password"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
</LinearLayout>